--- a/Enfoque 360/style1.css
+++ b/Enfoque 360/style1.css
@@ -54,7 +54,7 @@ header{
 }
 
 .ParteDosHeader{
-    width: 50%;
+    width: 70%;
     height: 20%;
     background-color: #cfcfcf;
     margin-top: 1rem;
@@ -74,7 +74,7 @@ header{
 .containerNoticias ul{
     display: flex;
     justify-content: center;
-    gap: 4rem;
+    gap: 3.5rem;
     text-decoration: none;
     list-style: none;
     cursor: pointer;
@@ -201,8 +201,11 @@ h4{
     font-size: 20px;
 }
 
+.names{
+    font-weight: bold;
+}
+
 footer{
     width: 100%;
     height: 15%;
-    background-color: brown;
 }
